@@ -13,7 +13,7 @@ CONF_JSON=$1
 if ! command -v mvn &> /dev/null
 then
     echo 'maven not installed. proceeding.'
-    java -XX:+UseConcMarkSweepGC -XX:ParallelGCThreads=2 -Xms${MIN_HEAP} -Xmx${MAX_HEAP} -cp "jars/*:target/classes/" amlsim.AMLSim "${CONF_JSON}"
+    java -XX:ParallelGCThreads=2 -Xms${MIN_HEAP} -Xmx${MAX_HEAP} -cp "jars/*:target/classes/" amlsim.AMLSim "${CONF_JSON}"
     exit
 else
     echo 'maven is installed. proceeding'
